# baia

./: Makefile  baia_ui.py  main.py  meta.yaml  pyproject.toml  setup.cfg
src/baia/: __init__.py  core.py
tests/unit/: test_core.py
