[metadata]
name = baia
version = 0.0.1
author = Juan Gutierrez
author_email = jgutierrezh0@gmail.com
description = A python package for computational chemistry and bioinformatics
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src